# CppExtendedEnumTester

./: .gitignore  CMakeLists.txt  README.md
enums/: capitals.json  names.json
src/: main.cpp
